// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers counter should handle DECREMENT_COUNTER 1`] = `
Object {
  "value": 0,
}
`;

exports[`reducers counter should handle counterMutations.increment 1`] = `
Object {
  "value": 2,
}
`;
